Fix for async banner contrast

--- a/darkmode/darkmode.scss
+++ b/darkmode/darkmode.scss
@@ -10,14 +10,14 @@ html {
 }
 
 #async_table_banner {
-	color: #000;
+	color: #fff;
 	background-color: #e00;
 
 	a {
-		color: #039;
+		color: #0cc;
 
 		&:link, &:visited {
-			color: #039;
+			color: #0cc;
 		}
 	}
 }
